--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -5,3 +5,29 @@ body,
   padding: 0;
   margin: 0;
 }
+
+.legend {
+    line-height: 18px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #555;
+    border: 5px solid rgb(255, 255, 255);
+    border-radius: 5px;
+}
+
+.legend strong {
+    font-size: 25px;
+    padding-bottom: 5px;
+}
+
+.legend i {
+    width: 30px;
+    height: 25px;
+    float: right;
+    margin-left: 5px;
+    opacity: 0.7;
+}
+
+.info.legend {
+    background-color: white;
+}
